package com.coding2.the.max.petstore.order.model;

public enum OrderStatus {
  CREATED, CONFIRMED, PROCESSING, READY_FOR_PICKUP, SHIPPED, DELIVERED, CANCELED
}
